[package]
name = "alloq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bump = []
debump = []
pool = []
list = []
statiq = []
system = []

[dependencies]
spin = "0.9.8"

[[bench]]
name = "main"
harness = false
